--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         <script src="Jlove.js"></script>
     </div>
     <button class="btn" onclick=fun() ><div>Yes</div></button>
-    <button class="btn2" onclick=fun2()><div>No</div></button>
+    <button class="btn2" onmouseover=fun2()><div>No</div></button>
 
 </body>
 </html>
